syntax = "proto3";

package pixelfs.v1;
option  go_package = "github.com/pixelfs/pixelfs/gen/pixelfs/v1";

service BlockService {
    rpc GetBlockDuration(GetBlockDurationRequest) returns (GetBlockDurationResponse) {}
    rpc SetBlockDuration(SetBlockDurationRequest) returns (SetBlockDurationResponse) {}
}

message BlockSettings {
    int32 width = 1;
    int32 height = 2;
    int32 bitrate = 3; // kbps
}

enum BlockType {
    SIZE     = 0;
    DURATION = 1;
}

enum BlockStatus {
    PENDING   = 0;
    READY     = 1;
}

message GetBlockDurationRequest {
    string node_id = 1;
    string hash = 2;
    int64  block_duration = 3;
}

message GetBlockDurationResponse {
    map<int64, double> data = 1;
}

message SetBlockDurationRequest {
    string              node_id = 1;
    string              location = 2;
    string              path = 3;
    map<int64, double>  data = 4;
}

message SetBlockDurationResponse {}
